# InteractiveDashboard

./: .gitignore  Makefile  README.md  pyproject.toml
.reference/Dashboard Course Zip - Udemy/inputs/broker2/: broker2.csv
.reference/Dashboard Course Zip - Udemy/jupyter notebooks/: BizExtractor.py  Notebook C - Combining Plotly and Dash.ipynb
.reference/Dashboard Course Zip - Udemy/outputs/mega/: MEGA_DF_2021-11-29_20h26m.csv  MEGA_DF_2021-12-05_01h36m.csv
.reference/Dashboard Course Zip - Udemy/outputs/portfolio_df/: portfolio_df_2021-12-05_01h56m.csv
.reference/Dashboard Course Zip - Udemy/outputs/price_hist/: AAPL_price_hist.csv  AMD_price_hist.csv  AMZN_price_hist.csv
.reference/Dashboard Course Zip - Udemy/outputs/ticker_information/: ticker_information.csv
assests/: style.css
data/: positions.csv
src/: data.py  drawdown_fig.py  layout.py  load.py  main.py  style.py  test.py  transform.py
src/components/: sunburst.py  theme.py
src/config/: paths.py
